--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>V-Smilez Dental Clinic
+                    <img src="./assets/images/logo.png" style="width: 100px;"/>
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -229,8 +229,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Olive Yew</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
+                            <small>Oral & Maxilo Facial Surgeon</small>
                         </div>
                     </div>
                 </div>
@@ -255,8 +255,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1 active"><a href="#team">Aida Joe</a></h5>
-                            <small>Orthodontist</small>
+                            <h5 class="member mb-1 active"><a href="#team">Dr. Rajashekar Nutalapati</a></h5>
+                            <small>Periodontist</small>
                         </div>
                     </div>
                 </div>
@@ -281,8 +281,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Teri Dac</a></h5>
-                            <small>Hygienist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Atchyuth Kumar</a></h5>
+                            <small>Endodontist</small>
                         </div>
                     </div>
                 </div>
@@ -307,8 +307,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Naveen Kumar Reddy Kolli </a></h5>
+                            <small>Pedodontist</small>
                         </div>
                     </div>
                 </div>
@@ -333,8 +333,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Praveen Puskur</a></h5>
+                            <small>Endodontist</small>
                         </div>
                     </div>
                 </div>
@@ -359,8 +359,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Rathod Prakash</a></h5>
+                            <small>MDS Maxillacial Surgeon & Implantologist Associate Professor</small>
                         </div>
                     </div>
                 </div>
@@ -385,8 +385,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Y.D.Vijaya Simha Raju</a></h5>
+                            <small>Prosthodontist & Implantologist </small>
                         </div>
                     </div>
                 </div>
@@ -411,8 +411,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Praveen Kumar</a></h5>
+                            <small>Orthodontist</small>
                         </div>
                     </div>
                 </div>
@@ -437,8 +437,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Sandeep</a></h5>
+                            <small>Orthodontist</small>
                         </div>
                     </div>
                 </div>
@@ -463,8 +463,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. B.Anitha</a></h5>
+                            <small>Cosmetic Dental Surgeon & Implantologist</small>
                         </div>
                     </div>
                 </div>
@@ -547,7 +547,7 @@
                 <div class="right-content-call mt-sm-0 mt-4">
                     <ul class="buttons">
                         <li class="phone-sec me-lg-4"><i class="fas fa-phone-volume"></i>
-                            <a class="call-style-w3" href="tel:+9182977 21721">82977 21721</a>
+                            <a class="call-style-w3" href="tel:+918297721721">+91 8297721721</a>
                         </li>
                         <li><a href="appointment.html" class="btn btn-style btn-style-2 mt-lg-0 mt-3">Book Now</a> </li>
                     </ul>
@@ -591,10 +591,10 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. John Doe</a></li>
-                            <li><a href="#doctor">Dr. Martin Ker</a></li>
-                            <li><a href="#doctor">Dr. Alexander</a></li>
-                            <li><a href="#doctor">Dr. Eliz Wilson</a></li>
+                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
+                            <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
+                            <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
                         </ul>
                     </div>
                 </div>
