--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>V-Smilez Dental
+                    <img src="./assets/images/logo.png" style="width: 100px;"/>
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -75,8 +75,8 @@
                 <div class="demo-inner-content">
                     <div class="container">
                         <div class="banner-info">
-                            <p class="mb-1">Only one kind of Treatement!</p>
-                            <h3>Your New Smile</h3>
+                            <h3>Welcome To</h3>
+                            <h1 class="text-white">Best Dental Hospital In Beeramguda</h1>
                             <a class="btn btn-style btn-style-2 mt-sm-5 mt-4" href="appointment.html">Book Now</a>
                         </div>
                     </div>
@@ -92,12 +92,12 @@
             <div class="row pb-xl-5 align-items-center">
                 <div class="col-lg-6 position-relative home-block-3-left pb-lg-0 pb-5">
                     <div class="position-relative">
-                        <img src="assets/images/home1.jpg" alt="" class="img-fluid radius-image">
+                        <img src="/assets/images/set image.jpg" alt="" class="img-fluid radius-image">
                     </div>
                     <div class="imginfo__box">
                         <h6 class="imginfo__title">Get a Appointment Today!</h6>
                         <p>Nemo enim ipsam oluptatem quia oluptas<br> sit aspernatur aut odit aut fugit. </p>
-                        <a href="tel:http://1(800)7654321"><i class="fas fa-phone-alt"></i> 1-800-654-3210</a>
+                        <a href="tel:http:// +91 8297721721"><i class="fas fa-phone-alt"></i> +91 8297721721 </a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-lg-6 offset-xl-1 mt-lg-0 mt-5 pt-lg-0 pt-5">
@@ -356,8 +356,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Olive Yew</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. MVS Sudhir</a></h5>
+                            <small>Oral & Maxillo Facial Surgeon</small>
                         </div>
                     </div>
                 </div>
@@ -382,8 +382,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1 active"><a href="#team">Aida Joe</a></h5>
-                            <small>Orthodontist</small>
+                            <h5 class="member mb-1 active"><a href="#team">Dr. Rajashekar Nutalapati</a></h5>
+                            <small>Periodontist</small>
                         </div>
                     </div>
                 </div>
@@ -408,8 +408,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Teri Dac</a></h5>
-                            <small>Hygienist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Atchyuth Kumar</a></h5>
+                            <small>Endodontist</small>
                         </div>
                     </div>
                 </div>
@@ -434,8 +434,8 @@
                             </a>
                         </div>
                         <div class="team-bottom-block p-4">
-                            <h5 class="member mb-1"><a href="#team">Anton Bne</a></h5>
-                            <small>Dentist</small>
+                            <h5 class="member mb-1"><a href="#team">Dr. Naveen Kumar Reddy Kolli</a></h5>
+                            <small>Pedodontist</small>
                         </div>
                     </div>
                 </div>
@@ -599,10 +599,10 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. John Doe</a></li>
-                            <li><a href="#doctor">Dr. Martin Ker</a></li>
-                            <li><a href="#doctor">Dr. Alexander</a></li>
-                            <li><a href="#doctor">Dr. Eliz Wilson</a></li>
+                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
+                            <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
+                            <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li> 
                         </ul>
                     </div>
                 </div>
