--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <i class="fas fa-tooth"></i>V-Smilez Dental Clinic
+                    <img src="./assets/images/logo.png" style="width: 100px;"/>
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -326,10 +326,10 @@
                     <div class="col-lg-2 col-md-2 col-4 footer-list-29 mt-md-0 mt-4">
                         <ul>
                             <h6 class="footer-title-29">Dentition</h6>
-                            <li><a href="#doctor">Dr. John Doe</a></li>
-                            <li><a href="#doctor">Dr. Martin Ker</a></li>
-                            <li><a href="#doctor">Dr. Alexander</a></li>
-                            <li><a href="#doctor">Dr. Eliz Wilson</a></li>
+                            <li><a href="#doctor">Dr. MVS Sudhir</a></li>
+                            <li><a href="#doctor">Dr. Rajashekar Nutalapati</a></li>
+                            <li><a href="#doctor">Dr. Atchyuth Kumar</a></li>
+                            <li><a href="#doctor">Dr. Naveen Kumar Reddy Kolli</a></li>
                         </ul>
                     </div>
                 </div>
