--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row pb-xl-5 align-items-center">
                 <div class="col-lg-6 position-relative home-block-3-left pb-lg-0 pb-5">
                     <div class="position-relative">
-                        <img src="/assets/images/set image.jpg" alt="" class="img-fluid radius-image">
+                        <img src="./assets/images/set image.jpg" alt="" class="img-fluid radius-image">
                     </div>
                     <div class="imginfo__box">
                         <h6 class="imginfo__title">Get a Appointment Today!</h6>
