--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">General Dentistry</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>General dentistry encompasses preventive, restorative, and diagnostic oral care provided by general dentists to maintain overall oral health..</p>
                         </div>
                     </div>
                 </div>
@@ -137,8 +136,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Urgent Surgery</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>Emergency dental surgery performed promptly at a dental clinic to address urgent oral health issues, such as severe tooth infections or trauma.</p>
                         </div>
                     </div>
                 </div>
@@ -149,8 +147,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Dental Implants</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>Dental implant services offered at a dental clinic include surgical placement of artificial tooth roots followed by restoration, providing a permanent solution for missing teeth.</p>
                         </div>
                     </div>
                 </div>
@@ -161,8 +158,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Tooth Whitening</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>Tooth whitening services offered at a dental clinic involve professional treatments to lighten and brighten teeth, enhancing their appearance and smile aesthetics.></p>
                         </div>
                     </div>
                 </div>
@@ -173,8 +169,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Prosthesis</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>Prosthesis services at a dental clinic encompass the fabrication and fitting of artificial dental appliances such as dentures, bridges, and crowns to restore function and aesthetics to the mouth.</p>
                         </div>
                     </div>
                 </div>
@@ -185,8 +180,7 @@
                         </div>
                         <div class="about-content">
                             <h5 class="mb-3"><a href="about.html">Dental Braces</a></h5>
-                            <p>Sed ut perspiciatis unde omnis iste natus error sit accusa ntium dolor emque
-                                laudan.</p>
+                            <p>Dental braces services provided at a dental clinic involve the orthodontic treatment of misaligned teeth using braces or aligners to achieve proper alignment and improve bite function.</p>
                         </div>
                     </div>
                 </div>
@@ -210,7 +204,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Sedation Dentistry</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Sedation dentistry in a dental clinic involves administering medication to help patients relax during dental procedures, ensuring a comfortable and anxiety-free experience.></p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -224,7 +218,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Child’s Dental Care</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Child's dental care in a dental clinic involves preventive measures, regular check-ups, and treatments tailored to promote oral health and development from infancy through adolescence.</p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -238,7 +232,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Family Dental Care</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Family dental care in a dental clinic encompasses comprehensive oral health services tailored to meet the needs of patients of all ages within a single household.</p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -252,7 +246,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Cosmetic Dentistry</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Cosmetic dentistry focuses on enhancing the appearance of teeth and smiles through various procedures such as teeth whitening, veneers, and dental implants.</p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -266,7 +260,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Cleaning with Air Flow</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Cleaning with Air Flow is a dental hygiene procedure that uses a combination of water, air, and fine powder to remove stains, plaque, and tartar from teeth effectively.</p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -280,7 +274,7 @@
                                 <a href="#url">
                                     <h4 class="mb-0">Complete Whitening</h4>
                                 </a>
-                                <p>Donec luctus rhoncus dignissim. Integer blandit mattis arcu, id orci.</p>
+                                <p>Complete whitening is a dental procedure aimed at lightening the color of teeth and enhancing their brightness through professional-grade bleaching treatments.</p>
                                 <a href="services.html" class="btn btn-style-primary">Learn More<i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
@@ -299,12 +293,9 @@
                 <div class="col-md-7 pe-lg-5">
                     <h5 class="text-new mb-4">We are proud to have the opportunity to give you the smile of your dreams.
                     </h5>
-                    <p class="mb-3">Nibh eu consequat magna ipsum ac ex. Nulla iaculis
-                        tincidunt elit, tortor luctus sit amet.
+                    <p class="mb-3">Our mission is to bring healthcare of International standards within the reach of every individual. We are committed to the achievement
                     </p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                        architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>To provide a world class integrated healthcare system, with a focus on compassionate patient care to the underprivileged people</p>
                     <a href="about.html" class="btn btn-style btn-style-2 mt-lg-5 mt-4">Learn More</a>
                 </div>
                 <div class="col-md-5 text-md-center mt-md-0 mt-5">
@@ -457,7 +448,7 @@
                                 <div class="card-body blog-details align-self pl-sm-0">
                                     <a href="#blog" class="blog-desc">Denists Against Root Canals
                                     </a>
-                                    <p>Lorem ipsum dolor sit amet consectetur ipsum adipisicing elit.</p>
+                                    <p>Some dentists advocate alternative treatments over root canals in certain cases, citing concerns about potential complications and long-term success rates.</p>
                                     <div class="d-flex align-items-center justify-content-between mt-lg-4 mt-5">
                                         <h5 class="text-blog-e">July 15, 2021</h5>
                                         <a href="#blog" class="blog-icon-e"><i class="fas fa-plus"></i></a>
@@ -478,7 +469,7 @@
                             <div class="col-sm-6">
                                 <div class="card-body blog-details align-self pl-sm-0">
                                     <a href="#blog" class="blog-desc">Treatment with Great Care</a>
-                                    <p>Lorem ipsum dolor sit amet consectetur ipsum adipisicing elit.</p>
+                                    <p>Treatment with great care is the hallmark of our dental clinic, ensuring each patient receives personalized and attentive attention throughout their visit.</p>
                                     <div class="d-flex align-items-center justify-content-between mt-lg-4 mt-5">
                                         <h5 class="text-blog-e">July 18, 2021</h5>
                                         <a href="#blog" class="blog-icon-e"><i class="fas fa-plus"></i></a>
