ANIL VSMILEZ FINAL

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                             <a class="nav-link" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="appointment.html">Book An Appointment</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -189,7 +192,12 @@
         </div>
     </section>
     <!-- //home block 2 -->
-
+    <div class="whatsapp">
+        <a href="">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+   
     <!-- home block 3 with slider -->
     <section class="w3l-index5 py-5">
         <div class="container py-md-5 py-4">
