--- a/services.html
+++ b/services.html
@@ -39,6 +39,9 @@
                             <a class="nav-link active" href="services.html">Services</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="appointment.html">Book An Appointment</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -47,6 +50,11 @@
                             required>
                         <button class="btn btn-style" type="submit"><i class="fas fa-search"></i></button>
                     </form>
+                </div>
+                <div class="whatsapp">
+                    <a href="">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
                 </div>
                 <!-- toggle switch for light and dark theme -->
                 <div class="cont-ser-position">
