--- a/about.html
+++ b/about.html
@@ -518,8 +518,8 @@
                         <div class="message-info">
                             <span class="fa fa-quote-left mr-2"></span>
                             <div class="message">As someone who's always been anxious about dental visits, I can't thank this clinic enough for their calming atmosphere and gentle approach. From the moment I walked in, I felt reassured and well-cared for. I highly recommend their services to anyone seeking top-notch dental care.</div>
-                            <div class="name">- Jhon</div>
-                            <div class="desp ms-2">School Prinicipal</div>
+                            <div class="name">- Rajesh</div>
+                            <div class="desp ms-2">Employee</div>
                         </div>
                     </div>
                 </div>
