--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="imginfo__box">
                         <h6 class="imginfo__title">Get a Appointment Today!</h6>
-                        <p>Nemo enim ipsam oluptatem quia oluptas<br> sit aspernatur aut odit aut fugit. </p>
+                        <p>Smile bright, schedule an appointment<br>let's keep those pearly whites shining</p>
                         <a href="tel:http:// +91 8297721721"><i class="fas fa-phone-alt"></i> +91 8297721721 </a>
                     </div>
                 </div>
