--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                     <div class="whatsapp">
-                        <a href="">
+                        <a href="https://wa.me/+918297721721">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
