--- a/appointment.html
+++ b/appointment.html
@@ -131,7 +131,7 @@
         </div>
     </section>
     <div class="whatsapp">
-        <a href="">
+        <a href="https://wa.me/+918297721721">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
