--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 
     <!-- inner banner -->
     <div class="whatsapp">
-        <a href="">
+        <a href="https://wa.me/+918297721721">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
