--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </section>
     <!-- //home block 2 -->
     <div class="whatsapp">
-        <a href="">
+        <a href="https://wa.me/+918297721721">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
