--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
                     </form>
                 </div>
                 <div class="whatsapp">
-                    <a href="">
+                    <a href="https://wa.me/+918297721721">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
