--- a/appointment.html
+++ b/appointment.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>V-Smilez Dental Clinic - Contact</title>
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-32x32.png" />
+    <!--favicon-->
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -19,7 +22,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <img src="./assets/images/logo.png" style="width: 100px;"/>
+                    <img src="./assets/images/logo.png" style="width: 100px;" />
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
@@ -89,7 +92,7 @@
     <section class="w3l-contact-11 py-5" id="contact">
         <div class="container py-md-5 py-4">
             <h3 class="title-style text-center mb-5"><span>Book An </span>Appointment</h3>
-            
+
             <div class="form-inner-cont mx-auto" style="max-width:800px">
                 <form action="https://sendmail.w3layouts.com/submitForm" method="post" class="signin-form">
                     <div class="row align-form-map">
@@ -114,7 +117,7 @@
                                 <option value="Urgent Surgery">Urgent Surgery</option>
                             </select>
                         </div>
-                       
+
                         <div class="col-sm-12 form-input">
                             <input type="number" name="w3lPhone" placeholder="Phone Number" class="contact-input">
                         </div>
