--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>V-Smilez Dental Clinic - Contact</title>
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-32x32.png" />
+    <!--favicon-->
     <!-- google font -->
     <link href="//fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -19,7 +22,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="index.html">
-                    <img src="./assets/images/logo.png" style="width: 100px;"/>
+                    <img src="./assets/images/logo.png" style="width: 100px;" />
                 </a>
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
