--- a/about.html
+++ b/about.html
@@ -410,7 +410,7 @@
                             <div class="message">I'm extremely pleased with the exceptional care I received at this
                                 dental clinic. The staff was friendly, professional, and attentive to my needs. My
                                 dental procedure was painless, and the results exceeded my expectations</div>
-                            <div class="name">- Johnson</div>
+                            <div class="name">- Priya</div>
                             <div class="desp ms-2">Businessman</div>
                         </div>
                     </div>
@@ -426,7 +426,7 @@
                                 this clinic enough for their calming atmosphere and gentle approach. From the moment I
                                 walked in, I felt reassured and well-cared for. I highly recommend their services to
                                 anyone seeking top-notch dental care.</div>
-                            <div class="name">- Rajesh</div>
+                            <div class="name">- Laxmi</div>
                             <div class="desp ms-2">Employee</div>
                         </div>
                     </div>
